service/yaml/nginx-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service-clusterip
  namespace: webapps
  labels:
    app: web
spec:
  selector:
    app: web
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
